<resources>
    <string name="app_name">WeatherForecastX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weather Oracle</string>
    <string name="nav_header_subtitle">somemail@some.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Current weather</string>
    <string name="menu_gallery">Cities</string>
    <string name="menu_slideshow">Weather on map</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">About</string>
    <string name="menu_send">Contact developer</string>

    <string name="refresh_weather">Refresh</string>

    <string name="open_weather_maps_app_id" translatable="false">fea82f030303d179dd680b5ade7deeb0</string>

    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>

    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather found.</string>

    <string name="activity_second">Activity Second!</string>
    <string name="to_second">Second</string>
    <string name="to_back">Back</string>
    <string name="humidity">Humidity: </string>
    <string name="temperature">Temperature: </string>
    <string name="pressure">Pressure: </string>
    <string name="lastupdate">Last update: </string>
    <string name="changecity">Change city</string>
    <string name="add_city">Add city</string>
    <string name="search_city">Search city</string>
    <string name="gobutton">Go!</string>
    <string name="remove_city">Remove city</string>
    <string name="clear_all">Clear All</string>
    <string name="more">More</string>
    <string name="mesure_items">Units</string>
    <string name="settings">Settings</string>
    <string name="action_not_found">Not Found</string>
    <string name="press_button">Message from server</string>
    <string name="button">OK</string>
    <string name="weather_image" translatable="false">Weather image</string>
    <string name="network_error">Connection Error!</string>
    <string name="view">History</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="get_in_current_point">Get in current point</string>

    <string-array name="citylist">
        <item>Murmansk</item>
        <item>Minsk</item>
        <item>Moscow</item>
        <item>Belgorod</item>
        <item>Arkhyz</item>
    </string-array>
</resources>
