<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.payts.weatherforecastx.MainActivity">
    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"
        android:title="@string/add_city" />

    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="20"
        app:showAsAction="ifRoom"
        android:title="@string/search_city" />

    <item
        android:id="@+id/menu_edit"
        android:orderInCategory="30"
        android:title="@string/change_city"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_remove"
        android:orderInCategory="40"
        android:title="@string/remove_city"/>


    <item
        android:id="@+id/menu_clear"
        android:orderInCategory="50"
        android:title="@string/clear_all" />

    <item
        android:id="@+id/menu_more"
        android:orderInCategory="60"
        android:title="@string/more">

        <menu>
            <item
                android:title="@string/mesure_items"/>
            <item
                android:title="@string/settings" />
        </menu>

    </item>
</menu>
